--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 markerclusters.addLayer(markers);
                 map.fitBounds(markers.getBounds());
                 map.attributionControl.addAttribution(metadata.attribution);
-                renderLegend();
+                //renderLegend();
             } else {
                 console.log('Could not load data...');
             }
